Desktop: fixed more waybar alignments and colors

--- a/desktop/waybar/style.css
+++ b/desktop/waybar/style.css
@@ -12,24 +12,16 @@ window#waybar {
 
 /*-----module groups----*/
 .modules-right {
-    background-color: #1e1e2e;
     margin: 2px 10px 0 0;
 }
 .modules-center {
-    background-color: #1e1e2e;
     margin: 2px 0 0 0;
 }
 .modules-left {
-    background-color: #1e1e2e;
+    background-color: rgba(30, 30, 46, 0.7);
     margin: 2px 0 0 5px;
 }
 /*-----modules indv----*/
-
-button {
-    /* box-shadow: inset 0 -3px transparent; */
-    /* border: none; */
-    /* border-radius: 0; */
-}
 
 button:hover {
     background-color: #313244;
@@ -41,15 +33,10 @@ button:hover {
 
 #workspaces button {
     padding: 2px 9px;
-    background-color: transparent;
-}
-
-#workspaces button:hover {
-    /* background: rgba(0, 0, 0, 0.2); */
+    color: #cdd6f4;
 }
 
 #workspaces button.focused {
-    /* background-color: #64727D; */
     background-color: #ffffff;
 }
 
@@ -70,6 +57,7 @@ button:hover {
 #keyboard-state,
 #language,
 #custom-power {
+    background-color: rgba(30, 30, 46, 0.7);
     padding: 0 10px;
 }
 
@@ -77,15 +65,6 @@ button:hover {
 #workspaces {
     margin: 0 4px;
 }
-
-.modules-left > widget:first-child > #workspaces {
-    margin-left: 0;
-}
-
-.modules-right > widget:last-child > #workspaces {
-    margin-right: 0;
-}
-
 
 #battery {
     background-color: #ffffff;
